--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,16 @@ mybatis:
   type-aliases-package: com.simpleaccount.entry
   configuration:
     map-underscore-to-camel-case: true
+--- #日志配置
 logging:
     level:
       com.simpleaccount.mapper: DEBUG
       com.simpleaccount.controller: WARN
     config:
       classpath:logback-spring.xml
+--- #redis缓存配置
 
-
-
+spring:
+  redis:
+    host: localhost
+    port: 6379
