修改数据库配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://193.112.11.253:3306/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8
-    username: simpleaccount
+    url: jdbc:mysql://193.112.11.253:888/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8
+    username: root
     password: zaq123
 --- #mybatis配置
 mybatis:
