--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,10 @@
 				</excludes>
 			</resource>
 			<resource>
-				<directory>src/main/resources/*.*</directory>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>**.*</exclude>
+				</excludes>
 			</resource>
 		</resources>
 	</build>
