--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 --- # 端口
 server:
-  port: 8080
+  port: 8443
+  ssl:
+    key-store: classpath:2087746_iazuresky.com.pfx
+    key-store-password: JSjkmCp8
+#server:
+#  port: 8081
 --- #数据源配置
 spring:
   datasource:
@@ -28,3 +33,7 @@ spring:
   redis:
     host: 193.112.11.253
     port: 6379
+  servlet:
+    multipart:
+      max-file-size: 500KB
+      max-request-size: 2MB
