--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 --- # 端口
-#server:
-#  port: 8443
-#  ssl:
-#    key-store: classpath:2087746_iazuresky.com.pfx
-#    key-store-password: JSjkmCp8
 server:
-  port: 8081
+  port: 8443
+  ssl:
+    key-store: classpath:2087746_iazuresky.com.pfx
+    key-store-password: JSjkmCp8
+#server:
+#  port: 8081
 --- #数据源配置
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://193.112.11.253:3306/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://193.112.11.253:3306/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: simpleaccount
     password: zaq123
 --- #mybatis配置
