--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 --- # 端口
-server:
-  port: 8443
-  ssl:
-    key-store: classpath:2087746_iazuresky.com.pfx
-    key-store-password: JSjkmCp8
 #server:
-#  port: 8081
+#  port: 8443
+#  ssl:
+#    key-store: classpath:2087746_iazuresky.com.pfx
+#    key-store-password: JSjkmCp8
+server:
+  port: 8081
 --- #数据源配置
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://193.112.11.253:3306/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://193.112.11.253:3306/simpleaccount?characterEncoding=utf8&serverTimezone=GMT%2B8&allowMultiQueries=true&autoReconnect=true
     username: simpleaccount
     password: zaq123
 --- #mybatis配置
@@ -34,7 +34,12 @@ spring:
     host: 193.112.11.253
     port: 6479
     password: Ls892903912
-  servlet:
-    multipart:
-      max-file-size: 500KB
-      max-request-size: 2MB
+logging.path:
+  ./target/logs
+weblogPath:
+  ${logging.path}\\spring.log
+#pagehelper分页插件配置
+pagehelper:
+    helper-dialect: mysql
+    reasonable: true
+    support-methods-arguments: true
